<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="ST_VG" Id="{e8999049-eca7-4ca1-9a7c-26918f6aba1e}">
    <Declaration><![CDATA[TYPE ST_VG :
STRUCT
	/// A general gauge structure is used to make the rest of the interlocking simpler. There are some parameters for cold cathodes that are not used by pirani.
	///These features aren't disabled, they just aren't used, think child/parent classes. 
	/// 
	{attribute 'pytmc' := '
    pv: PRESS;
	io: i;
    '}
	rPRESS: REAL;  //This is the human-readable pressure
	{attribute 'pytmc' := '
    pv: AT_VAC;
	io: i;
    '}
	xAT_VAC: BOOL;
	{attribute 'pytmc' := '
    pv: PRESS_OK;
	field: ZNAM PRESS NOT OK; 
	field: ONAM PRESS OK;
	io: i;
    '}
	xPRESS_OK: BOOL;
	{attribute 'pytmc' := '
    pv: STATE;
	io: i;
    '}
	eState	:	E_PressureState;
	(* EPICS Controls *)	
	{attribute 'pytmc' := '
    pv: HV_SW;
	io: io;
    '}
	xHV_SW: BOOL; // High Voltage Switch from epics
	
	/// Controls and I/Os
	{attribute 'pytmc' := '
    pv: PRESS_R;
	io: i;
    '}
	i_iPRESS_R  :INT; // input Pressure // Link to analog Input
	{attribute 'pytmc' := '
    pv: HV_ON;
	io: i;
    '}
	i_xHV_ON	: BOOL; //  True when High Voltage is on  
	{attribute 'pytmc' := '
    pv: DISC_ACTIVE;
	field: ZNAM Discharge not active; 
	field: ONAM Discharge Active;
	io: i;
    '}
	i_xDisc_Active : BOOL;// Discharge Current Active 
	{attribute 'pytmc' := '
    pv: HV_DIS;
	io: i;
    '}
	q_xHV_DIS : BOOL; // Enable High Voltage when True 
	//
	wHV_RO: WORD;
		
	/// Bakeout bit 
	xBAKEOUT: BOOL;
	
	//enum for gauge type - will replace iType
	eTYPE: Gauge_Type := PG907; 
	//Gauge type, deprecated (default to pirani)
	iTYPE: INT := 2;
	// Index location of the associated Pirani Gauge
	wPG: WORD;
	
	 
	xTurnOnTime: BOOL;/// Turn on Timers for cold cathode warmup
	
	iVacSp	:	INT;/// At vacuum setpoint for all gauges
	{attribute 'pytmc' := '
    pv: VAC_SP;
	io:io;
    '}
	rVAC_SP: REAL := 0.5; /// At vacuum setpoint for all gauges
	/// Protection setpoint for ion gauges at which the gauge turns off, not used for pirani 
	{attribute 'pytmc' := '
    pv: PRO_SP;
	io: io;
    '}
	rPRO_SP: REAL := 0.0001;
	{attribute 'pytmc' := '
    pv: SP_HYS;
	io: io;
	'}
	/// Protection setpoint hysteresis 
	rHYS_PR: REAL := 0.001; 
	{attribute 'pytmc' := '
    pv: ILK_OK;
	io: i;
	'}
	xILKOk	:	BOOL; (* also a control *)
	

	/// Full scale pressure in Torr for baratron pressure conversion 
	rFULL_SCALE: REAL := 1000;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>